# hsru

./: LICENSE  Readme.md  requirements.txt
core/: hsru.py  hsru_casual_lm.py  hsru_parallal.py
cpp/: CMakeLists.txt  README.md  check.py  pyproject.toml  setup.py
cpp/hsru_cpp/: hsru_binding.cpp  hsru_kernel.cu  hsru_kernel.h
cpp/hsru_cuda_kernel/: __init__.py
cpp/hsru_tests/: hsru_parallel.py  parity_test.py  test.py
src/core/: hsru.py  hsru_casual_lm.py  hsru_parallal.py
src/cpp/: CMakeLists.txt
src/cpp/hsru_cpp/: hsru_kernel.cu
src/cpp/hsru_tests/: parity_test.py
tests/: curriculum.py  curriculum_detail.py  curriculum_hsru_detail_gpu.py  curriculum_hsru_simple_cpu.py  echo_test.py  echo_test_cpu.py  exec_time.py  hsru_exec_time_cpu_vs_gpu.py  temporal_parity.py  temporal_parity_cpu.py  temporal_parity_gpu.py  test_2k_seq_parallel_gpu.py  wrapper.py
tests/tasks/: dungeon.py  dungeon_gpu.py  dyck_language.py  dyck_language_gpu.py  garage_door.py  garage_door_cpu.py  todo.py  todo_cpu.py
verify/: benchmark_memory_horizon.py  curriculum_compare_default_cpu.py  curriculum_compare_default_gpu.py  parity_benchmark.py  temporal_parity_cpu.py  temporal_parity_noisy_cpu.py  verify_data.py
